...
                    }
                    .lineLimit(1)
                    .padding(.vertical, 10)
                    
                    Button("Change password") {}
                    Button("Remove my account") {}
                    Button("Sign Out", role: .destructive, action: firestoreManager.signOut)
                } header: {
                    Text("Account settings")
                }
            }
            .navigationTitle("Settings")
        }
        .navigationViewStyle(.stack)
        .alert("Cannot enable authentication", isPresented: $showAuthError, actions: {
            Button("OK") {}
        }, message: {
            Text("Your device  does not support local authentication.")
...
